--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@ Hoy, dirijo mi propia clínica especializada <strong>"Fisio Plus"</strong> en re
                 </div>
                 <div class="p-40">
                   <h3 class="package-type mt-90">Paquete de 10 sesiones</h3>
-                  <p>Contamos con un paquete de 10 sesiones para pacientes de traumatilogía</p>
+                  <p>Contamos con un paquete de 10 sesiones para pacientes de traumatología</p>
                   <br>
 
                   <a href="https://wa.me/527711923216"  class="cta-button"><i class="fab fa-whatsapp"></i> Agenda tu cita ahora</a>
